syntax = "proto3";

package v1.appserver;
option go_package = "mistapi/src/protos/v1/appserver";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

service AppserverService {
  rpc Create(CreateRequest) returns (CreateResponse) {}
  rpc GetById(GetByIdRequest) returns (GetByIdResponse) {}
  rpc List(ListRequest) returns (ListResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

// ----- STRUCTURES -----
message Appserver {
  string id = 1;
  string name = 2;
  bool is_owner = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

// ----- REQUEST/RESPONSE -----
message CreateRequest { string name = 1; }
message CreateResponse { Appserver appserver = 1; }

message GetByIdRequest { string id = 1; }
message GetByIdResponse { Appserver appserver = 1; }

message ListRequest { google.protobuf.StringValue name = 1; }
message ListResponse { repeated Appserver appservers = 1; }

message DeleteRequest { string id = 1; }
message DeleteResponse {}
